<resources>
    <string name="Database_name">Loops_Photo_Motion_Database</string>
    <string name="Rate_in_menu">Rate Us</string>
    <string name="Select_new_image">Select an image</string>
    <string name="Share_video">Share Video</string>
    <string name="Tutorial_page_five_footer_point_one">PRESS ON THE POINTS OR ARROW WHICH YOU WANT TO REMOVE FROM THE IMAGE.</string>
    <string name="Tutorial_page_five_footer_point_three">AFTER SELECTING THE PARTICULAR PORTION ON IMAGE, PRESS THE DELETE ICON TO REMOVE THE SELECTED POINTS OR ARROW FROM IMAGE.</string>
    <string name="Tutorial_page_five_footer_point_two">DRAG UPTO THE POINT OR ARROW WHICH YOU WANT TO REMOVE FROM IMAGE.</string>
    <string name="Tutorial_page_five_header">SELECTION TOOL</string>
    <string name="Tutorial_page_five_sub_header">REMOVES THE SELECTED PORTION OF POINTS OR ARROW FROM IMAGE</string>
    <string name="Tutorial_page_four_footer_point_one">PRESS ON THE PORTION OF IMAGE WHICH YOU DONT WANT TO MOVE.</string>
    <string name="Tutorial_page_four_footer_point_two">IT WILL RESTRICT THE MOTION ON SELECTED PART OF IMAGE.</string>
    <string name="Tutorial_page_four_header">STABILIZATION TOOL</string>
    <string name="Tutorial_page_four_sub_header">Points close to each other will form a line or stabilised region which will restrict it to perform motion.</string>
    <string name="Tutorial_page_one_footer_point_one">LIVE WALLPAPER IS THE APPLICATION THAT GIVES LIFE TO YOUR PHOTOS.</string>
    <string name="Tutorial_page_one_footer_point_three">DRAG TO LEFT AND FOLLOW THE STEPS TO CREATE YOUR OWN STUFF.</string>
    <string name="Tutorial_page_one_footer_point_two">THIS APPLICATION ALLOWS YOU TO CREATE YOUR OWN VIDEOS FROM STILL IMAGES.</string>
    <string name="Tutorial_page_one_header">WELCOME TO</string>
    <string name="Tutorial_page_seven_footer_point_two">Drag through the selected area which you want to erase.</string>
    <string name="Tutorial_page_seven_header">ERASE TOOL</string>
    <string name="Tutorial_page_six_footer_point_one">SELECT THE SIZE OF MASKING TOOL ACCORDING TO THE USEABILITY.</string>
    <string name="Tutorial_page_six_footer_point_three">USE ERASER IF YOU WANT TO ERASE THE MASKING FROM A PARTICULAR AREA.</string>
    <string name="Tutorial_page_six_footer_point_two">Drag your finger on the portion which you don\'t want to be moved.</string>
    <string name="Tutorial_page_six_header">MASKING TOOL</string>
    <string name="Tutorial_page_six_sub_header">Restricts the selected portion of image to perform motion.</string>
    <string name="Tutorial_page_three_footer_point_one">SET THE SIZE OF ARROW.</string>
    <string name="Tutorial_page_three_footer_point_two">Drag your finger upto the portion on which you want to show sequence of motion.</string>
    <string name="Tutorial_page_three_header">SEQUENCE TOOL</string>
    <string name="Tutorial_page_three_sub_header">Drag your finger upto the portion on which you want to show sequence of motion.</string>
    <string name="Tutorial_page_two_footer_point_one">SELECT START POINT.</string>
    <string name="Tutorial_page_two_footer_point_two">Drag your finger upto that portion which you want to move.</string>
    <string name="Tutorial_page_two_header">MOTION TOOL</string>
    <string name="Tutorial_page_two_sub_header">Drag your finger upto that portion which you want to move.</string>
    <string name="Tutorial_title">TUTORIAL</string>
    <string name="about_us_in_menu">About Us</string>
    <string name="ad_attribution">Ad</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_id">ca-app-pub-6655728009849769~5572827436</string>
    <string name="app_name">Loops Photo Motion\nLive Wallpaper</string>
    <string name="app_name_without_tagline">Live Wallpaper</string>
    <string name="choose_wallpaper">Needs to choose this app in system live wallpaper settings first.\n\nPlease select \"Loops Photo Motion Live Wallpaper\" in next screen.</string>
    <string name="choose_wallpaper_title">Note: Choose Wallpaper</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="create_new">Create</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title">Crop Image</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="default_failed">Failed to load default wallpaper! Please set manually.</string>
    <string name="demo_folder">Demo_Videos</string>
    <string name="empty_creation">No live wallpaper created yet.\nMake first live wallpaper now !</string>
    <string name="empty_creationscreen">No live wallpaper found.</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_description">Fullscreen mode</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_shuffle_description">Shuffle</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="full_id">ca-app-pub-6655728009849769/8046639034</string>
    <string name="gles_version">Needs to support GLESv2 or higher version!</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="how_was_your_experience_with_us">Share your experience with us</string>
    <string name="images_folder">Loops_Photo_Motion_Images</string>
    <string name="invalid_path">Wallpaper path invalid, loading default…</string>
    <string name="later_rate_us">Later</string>
    <string name="load_image_fail">Error loading image!</string>
    <string name="my_creation_activity">My Creation</string>
    <string name="my_creation_empty_text">No Creation Found</string>
    <string name="my_creation_home_screen">MY CREATION</string>
    <string name="my_java_activity">Edit Photo</string>
    <string name="native_advanced">ca-app-pub-6655728009849769/3967777313</string>
    <string name="never_rate_us">No, Thanks</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_confirmation">You\'ll get a notification with the link when you\'re back online</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">We\'ll send you a notification with a link to the advertiser site.</string>
    <string name="offline_opt_in_title">Open ad when you\'re back online.</string>
    <string name="ok">ok</string>
    <string name="ok_button">Ok</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="permission_text">To open your images and generate your videos we need your authorization.</string>
    <string name="permission_title">Permission to read and write</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="preference_file_key">PREFERENCES_KEY</string>
    <string name="preview_activity">Preview</string>
    <string name="privacy_policy_activity">Privacy policy</string>
    <string name="privacy_policy_in_menu">Privacy Policy</string>
    <string name="project_folder">Loops_Photo_Motion_Videos</string>
    <string name="project_name">Loops Photo Motion Live Wallpaper</string>
    <string name="rate_us">Enjoying the application</string>
    <string name="rate_us_now">Rate us</string>
    <string name="rationale_ask">This app may not work correctly without the requested permissions.</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="save_video_activity">Save Video</string>
    <string name="save_video_pd">Exporting Live Photo</string>
    <string name="save_video_with_logo">With logo</string>
    <string name="save_video_without_logo">Create Video</string>
    <string name="search_menu_title">Search</string>
    <string name="share_in_menu">Share App</string>
    <string name="splash_name">Loops Photo Motion Live Wallpaper</string>
    <string name="tag_line_app">Add life to your Photos</string>
    <string name="text_resolution_max">Max</string>
    <string name="text_save_resolution">Resolution</string>
</resources>