<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="3.5"
                android:gravity="center">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="35dp"
                            android:src="@drawable/icon200" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_app_name_splash"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="18sp"
                        android:gravity="bottom|center_vertical|center_horizontal|center"
                        android:text="@string/splash_name"
                        android:textColor="@color/color_text_yellow"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom|center_vertical|center_horizontal|center"
                        android:gravity="bottom|center_vertical|center_horizontal|center"
                        android:text="@string/tag_line_app"
                        android:textColor="@color/color_tag_line"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1.3"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/fira_sans_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/tv_size_22" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2.7"
                android:gravity="center">

                <com.wang.avi.AVLoadingIndicatorView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    app:indicatorColor="@color/color_for_click"
                    app:indicatorName="LineSpinFadeLoaderIndicator" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
