<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_mainpopup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popup_bg"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical|center_horizontal|center"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="2dp"
        app:cardBackgroundColor="@color/color_white"
        app:cardCornerRadius="@dimen/margin_6"
        app:cardElevation="@dimen/margin_5"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical|center_horizontal|center"
            android:gravity="left|center_vertical|center_horizontal|center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="0dp">

                <LinearLayout
                    android:id="@+id/llSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="50dp">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/fira_sans_regular"
                        android:gravity="left|center_vertical|center_horizontal|center"
                        android:text="@string/share_in_menu"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/tv_size_16" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="50dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/fira_sans_regular"
                        android:gravity="left|center_vertical|center_horizontal|center"
                        android:text="@string/Rate_in_menu"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/tv_size_16" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPrivacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="?attr/selectableItemBackground"
                    android:paddingLeft="10dp"
                    android:paddingRight="50dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/fira_sans_regular"
                        android:gravity="left|center_vertical|center_horizontal|center"
                        android:text="@string/privacy_policy_in_menu"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/tv_size_16" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
