<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_for_saving"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_main_save_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="SAVE VIDEO"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="vertical" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="6"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2">

                            <TextView
                                android:id="@+id/tv_Resolution"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/text_save_resolution"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="6">

                            <com.demo.livwllpaper.views.DynamicSeekBarView
                                android:id="@+id/seekbar_resolution_Save"
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_Resolution"
                                android:layout_alignStart="@+id/seekbar_save_duration"
                                android:layout_alignEnd="@+id/seekbar_save_duration"
                                android:layout_marginTop="5dp"
                                android:max="10000"
                                android:progress="600"
                                android:theme="@style/AppTheme" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2">

                            <TextView
                                android:id="@+id/tv_Resolution_Ideal_size"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignTop="@+id/seekbar_resolution_Save"
                                android:layout_alignParentEnd="true"
                                android:layout_marginLeft="5dp"
                                android:layout_toEndOf="@+id/seekbar_resolution_Save"
                                android:text="@string/text_resolution_max"
                                android:textAlignment="viewStart"
                                android:textColor="@color/colorPrimary"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_Resolution_Saved"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/seekbar_resolution_Save"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="5dp"
                            android:text="1280"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:gravity="center">

                        <Button
                            android:id="@+id/btn_save_without_logo"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:text="@string/save_video_without_logo"
                            android:textColor="@color/color_white"
                            android:visibility="visible" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:visibility="gone">

                        <Button
                            android:id="@+id/btn_save_with_logo"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:text="@string/save_video_with_logo"
                            android:textColor="@color/color_white"
                            android:visibility="visible" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_status_loaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-5dp"
                android:layout_toStartOf="@+id/btn_save_with_logo"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="8sp"
                android:visibility="gone" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_bitmap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>
